fixed spacing

--- a/coolpics/coolpics2.css
+++ b/coolpics/coolpics2.css
@@ -83,23 +83,24 @@ footer{
 }
 
 dialog{
+    position: fixed;
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .6);
     z-index: 10;
 }
-img dialog{
+dialog img {
     margin: 20vh auto;
-    width: 90%;
     max-height: 100%;
+    border: none
 }
 .close-viewer{
     position: absolute;
-    top: 1em;
-    left: 1em;
+    top: 20vh;
+    
 }
-
-
 @media screen and (min-width: 700px) {
     .gallery {
         grid-template-columns: 1fr 1fr;
